Removed obsolete asserts and fixed initialization of a float.

BUG: 387299
FIXED-IN: 2.5